[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-path-analyzer"
version = "0.1.0"
description = "Analyze drone GPS path CSV files and export segmented CSV files plus an AI Analyze Overview PNG."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
	{ name = "DrFirst" }
]
keywords = ["drone", "gps", "path", "analysis", "segmentation", "csv"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
	"numpy>=1.24.0",
	"pandas>=2.0.0",
	"scikit-learn>=1.3.0",
	"hmmlearn>=0.3.0",
	"matplotlib>=3.7.0",
]

[project.scripts]
"drone-path-analyzer" = "drone_path_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_path_analyzer"]
